Add social media links to contact section

--- a/index.html
+++ b/index.html
@@ -720,6 +720,13 @@
             <p><strong>📧 Email:</strong> team@rise-aerial.com</p>
             <p>Aerial Arts | Acrobatics | Pole | Yoga | Pilates </p>
         </div>
+        <div class="contact-item">
+                <strong>Social Media:</strong>
+                <div>
+                    <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
+                    <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
+                </div>
+            </div>
     </header>
     
     <nav class="sticky-nav">
@@ -969,7 +976,7 @@
                 <strong>Social Media:</strong>
                 <div>
                     <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
-                    <a href="https://www.tiktok.com/@rise_aerial_belfast" target="_blank" rel="noopener noreferrer">TikTok</a>
+                    <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
                 </div>
             </div>
         </section>
