Revise location info and update video formats
Updated location and email information, and changed video sources to MP4 format.

--- a/index.html
+++ b/index.html
@@ -733,10 +733,7 @@
 
         <h1>Where Fitness Takes Flight</h1>
         <p>Rise Aerial Acrobatics</p>
-        <div class="location-info">
-            <p><strong>📍 Location:</strong> <a href="https://www.google.com/maps/place/Rise+Aerial+Acrobatics/@54.5932542,-5.9140019,17z/data=!4m15!1m8!3m7!1s0x48610901dfd6bcdb:0x5b0a9e8cebf3b7bb!2sRise+Aerial+Acrobatics!8m2!3d54.5932542!4d-5.911427!10e1!16s%2Fg%2F11ydlfwsyz!3m5!1s0x48610901dfd6bcdb:0x5b0a9e8cebf3b7bb!8m2!3d54.5932542!4d-5.911427!16s%2Fg%2F11ydlfwsyz?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"> Unit 9, The Hub, 45 Ravenhill Road, Belfast, BT6 8DQ</a></p>
-            <p><strong>📍 Email:</strong> <a href="mailto:team@rise-aerial.com">team@rise-aerial.com</a></p>
-            <p>Aerial Arts | Acrobatics | Pole | More Coming Soon </p>
+            <p><strong>Aerial Arts | Acrobatics | Pole | More Coming Soon</strong>  </p>
             <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
             <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
             </div>
@@ -843,13 +840,15 @@
                     <div class="stars">★★★★★</div>
                     <p>"I would recommend it, there's a good sense of community. Everyone in the class cheers everyone on and it's really fun."</p>
                     <video controls>
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766443891/Rise-Pole-Testimony_bseesj.mov" type="video/mov">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445310/Pole_tbrg4d.mp4" type="video/mp4">
 </video>
+                </div>
+                
                 <div class="testimonial-card">
                     <div class="stars">★★★★★</div>
                     <p>"It was super good fun, I'd definitely come again"</p>
 <video controls>
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766443858/Rise-First-Testimony_s2dvea.mov" type="video/mov">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445308/Aerial1_riyup1.mp4" type="video/mp4">
 </video>
                 </div>
                 
@@ -857,7 +856,7 @@
                     <div class="stars">★★★★★</div>
                     <p>"The thing I've gained the most from it is confidence!"</p>
                     <video controls>
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766443899/Rise-Aerial-Testimony2_nkivah.mov" type="video/mov">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445857/Pole1_mska45.mp4" type="video/mp4">
 </video>
                 </div>
             </div>
