--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         }
         
         .nav-menu a {
-            color: var(--text-dark);
+            color: var(--accent-teal);
             text-decoration: none;
             font-weight: 500;
             font-size: 0.95rem;
