Update link styling and restructure contact section

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         }
         
         .nav-menu a {
-            color: var(--accent-teal);
+            color: var(--text-dark);
             text-decoration: none;
             font-weight: 500;
             font-size: 0.95rem;
@@ -741,8 +741,11 @@
         <h1>Where Fitness Takes Flight</h1>
         <p>Rise Aerial Acrobatics</p>
             <p><strong>Aerial Arts | Acrobatics | Pole | More Coming Soon</strong>  </p>
-            <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
-            <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
+            <div class="contact-item">
+                <div>
+                    <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
+                    <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
+                </div>
             </div>
     </header>
     
