Add contact section with social media links

--- a/index.html
+++ b/index.html
@@ -741,12 +741,14 @@
         <h1>Where Fitness Takes Flight</h1>
         <p>Rise Aerial Acrobatics</p>
             <p><strong>Aerial Arts | Acrobatics | Pole | More Coming Soon</strong>  </p>
+            <section class="contact-section">
             <div class="contact-item">
                 <div>
                     <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
                     <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
                 </div>
             </div>
+            </section>
     </header>
     
     <main>
