Add social-link class to Instagram and TikTok links

--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
             margin: 1rem 0;
             font-size: 0.95rem;
         }
+
+            .social-link {
+            color: var(--accent-teal);
+         }
+
+             .social-link:hover {
+            color: white;
+         }
         
         .location-info p {
             margin: 0.5rem 0;
@@ -742,8 +750,8 @@
         <p>Rise Aerial Acrobatics</p>
             <p><strong>Aerial Arts | Acrobatics | Pole | More Coming Soon</strong>  </p>
                 <div>
-                    <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
-                    <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a>
+                    <a href="https://www.instagram.com/rise_aerial_belfast/" class="social-link">Instagram</a> • 
+                    <a href="https://www.tiktok.com/@rise_aerial_belfa" class="social-link">TikTok</a>
                 </div>
     </header>
     
