Change section title from 'Visit Us' to 'Contact Us'

--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
         </section>
         
         <section class="contact-section">
-            <h2>Visit Us</h2>
+            <h2>Contact Us</h2>
             <div class="contact-item">
                 <strong>Email:</strong>
                 <a href="mailto:team@rise-aerial.com">team@rise-aerial.com</a>
