Update contact section and class names in HTML

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#testimonials">Reviews</a></li>
                 <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contact-form" class="nav-cta">Contact</a></li>
+                <li><a href="#contact-form">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -952,7 +952,7 @@
             </div>
         </section>
         
-        <section class="contact-section">
+        <section class="contact-form" id="contact">
             <h2>Contact Us</h2>
             <div class="contact-item">
                 <strong>Email:</strong>
