Update contact section and add link in navigation

--- a/index.html
+++ b/index.html
@@ -742,6 +742,7 @@
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#testimonials">Reviews</a></li>
                 <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -951,7 +952,7 @@
             </div>
         </section>
         
-        <section class="contact-form" id="contact">
+        <section class="contact-section" id="contact">
             <h2>Contact Us</h2>
             <div class="contact-item">
                 <strong>Email:</strong>
