Add booking link for classes in index.html

--- a/index.html
+++ b/index.html
@@ -757,6 +757,9 @@
         <h1>Where Fitness Takes Flight</h1>
         <p>Rise Aerial Acrobatics</p>
             <p><strong>Aerial Arts | Acrobatics | Pole | More Coming Soon</strong>  </p>
+            <p><a href="https://gymcatch.com/app/provider/8819/packages" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+                    Book a Class
+                </a></p>
                 <div>
                     <a href="https://www.instagram.com/rise_aerial_belfast/" class="social-link">Instagram</a> • 
                     <a href="https://www.tiktok.com/@rise_aerial_belfa" class="social-link">TikTok</a>
