Modify priceRange and add offers section
Updated the price range and added offers for classes.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         "latitude": "54.5932542",
         "longitude": "-5.9114270"
       },
-      "priceRange": "£",
+      "priceRange": "£15-£120",
       "image": {
         "@type": "ImageObject",
         "url": "https://rise-aerial.com/studio-image.jpg",
@@ -87,38 +87,26 @@
         "@type": "City",
         "name": "Belfast"
       },
-      "service": [
-        {
-          "@type": "Service",
-          "name": "Aerial Hoop Classes",
-          "description": "Learn aerial hoop skills from beginner to advanced levels"
-        },
-        {
-          "@type": "Service",
-          "name": "Pole Dancing Classes",
-          "description": "Professional pole dancing and pole fitness training"
-        },
-        {
-          "@type": "Service",
-          "name": "Aerial Silks Classes",
-          "description": "Aerial fabric and silks acrobatics training"
-        },
-        {
-          "@type": "Service",
-          "name": "Aerial Straps Classes",
-          "description": "Dynamic aerial straps and conditioning classes"
-        },
-        {
-          "@type": "Service",
-          "name": "Acrobatics Classes",
-          "description": "Ground and partner acrobatics skill development"
-        },
-        {
-          "@type": "Service",
-          "name": "Flexibility Training",
-          "description": "Dynamic stretching and flexibility coaching"
-        }
-      ],
+"offers": [
+  {
+    "@type": "Offer",
+    "name": "Drop-in Class",
+    "price": "15",
+    "priceCurrency": "GBP"
+  },
+  {
+    "@type": "Offer",
+    "name": "Monthly Subscription",
+    "price": "60",
+    "priceCurrency": "GBP"
+  },
+  {
+    "@type": "Offer",
+    "name": "Premium Subscription",
+    "price": "120",
+    "priceCurrency": "GBP"
+  }
+]
       "review": [
         {
           "@type": "Review",
