Revise SEO meta tags and descriptions in index.html
Updated meta tags and descriptions for better SEO and clarity.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rise Aerial Acrobatics Belfast - Aerial hoop, pole, silks, straps & acrobatics classes for beginners to advanced. Safe, supportive aerial arts training in Belfast, Northern Ireland.">
-    <meta name="keywords" content="aerial hoop Belfast, pole dancing classes Belfast, aerial silks, acrobatics classes, aerial arts training, fitness classes Northern Ireland">
+    <meta name="keywords" content="aerial arts Belfast, pole dancing classes Belfast, things to do Belfast, specialist gym, fun fitness Northern Ireland">
     <meta name="author" content="Rise Aerial Acrobatics">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -21,7 +21,7 @@
     
     <!-- Open Graph Tags for Social & AI Visibility -->
     <meta property="og:title" content="Rise Aerial Acrobatics Belfast - Pole, Aerial Hoop & Silks Classes">
-    <meta property="og:description" content="Expert aerial arts classes in Belfast. Learn aerial hoop, pole, silks, straps & acrobatics. Beginner-friendly training for all fitness levels.">
+    <meta property="og:description" content="Aerial arts classes in Belfast. Learn aerial hoop, pole, silks, straps & acrobatics. Specialist Studio Gym. Fun things to do in Belfast.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rise-aerial.com">
     <meta property="og:image" content="https://res.cloudinary.com/dpqrk2j3a/image/upload/v1766354986/Logo_oab0nt.png">
@@ -40,7 +40,7 @@
       "@type": "LocalBusiness",
       "@id": "https://rise-aerial.com",
       "name": "Rise Aerial Acrobatics",
-      "description": "Professional aerial acrobatics training studio offering pole, aerial hoop, silks, straps and acrobatics classes for beginners to advanced",
+      "description": "Aerial arts classes in Belfast. Learn aerial hoop, pole, silks, straps & acrobatics. Specialist Studio Gym. Fun things to do in Belfast.",
       "url": "https://rise-aerial.com",
       "telephone": "+44 7753387379",
       "email": "team@rise-aerial.com",
@@ -60,7 +60,7 @@
       "priceRange": "£15-£120",
       "image": {
         "@type": "ImageObject",
-        "url": "https://rise-aerial.com/studio-image.jpg",
+        "url": "https://res.cloudinary.com/dpqrk2j3a/image/upload/v1766354986/Logo_oab0nt.png",
         "width": 1200,
         "height": 630
       },
@@ -679,8 +679,8 @@
             <h2>Where Fitness Takes Flight</h2>
             <p>
                 Rise Aerial Acrobatics is Belfast's premier destination for aerial arts training. Whether you're looking for 
-                a new fitness challenge, want to build confidence through aerial disciplines, or are seeking a supportive community, 
-                we provide expert instruction in pole dancing, aerial hoop, aerial silks, aerial straps, and acrobatics with more coming soon!
+                something new to do in Belfast, want to build confidence through aerial disciplines, or are seeking a fun, supportive community, 
+                we provide expert instruction in pole dancing, aerial hoop, aerial silks, aerial straps, and acrobatics with more activities coming soon!
         </section>
 
 <video controls>
@@ -957,7 +957,7 @@ Rise Aerial Acrobatics Belfast is for over 18s only.
         <section id="booking" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 40px; border-radius: 8px; text-align: center;">
             <h2 style="color: white; border-color: white;">Ready to Get Started?</h2>
             <p style="margin-bottom: 20px;">
-                Take your first step into the world of aerial acrobatics. Book your first class at Rise Aerial Belfast today!
+                Try something new, get fit and have fun! Book your first class at Rise Aerial Belfast today!
             </p>
             <a href="https://gymcatch.com/app/provider/8819/packages" class="btn btn-secondary">Book Your First Class on Gymcatch</a>
         </section>
@@ -976,7 +976,7 @@ Rise Aerial Acrobatics Belfast is for over 18s only.
                 <p style="margin-top: 15px;">
                     Located in Belfast, Ravenhill Road, Rise Aerial is easily accessible and provides a welcoming 
                     space for aerial enthusiasts of all levels. Our studio is equipped with professional-grade equipment and 
-                    trained instructors.
+                    qualified instructors.
                 </p>
             </div>
         </section>
