Add loading attribute to video elements

--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
     display: block;
     margin: 1.5rem auto; /* centers the video */
     border-radius: 10px; /* optional, for nicer look */
+            controls
+  loading="lazy"
 }
         
         header {
@@ -683,7 +685,8 @@
                 we provide expert instruction in pole dancing, aerial hoop, aerial silks, aerial straps, and acrobatics with more activities coming soon!
         </section>
 
-<video controls>
+<video controls
+  loading="lazy">
     <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1767104272/NewYearAll_gszoqa.mp4" type="video/mp4">
 </video>
 
@@ -831,7 +834,8 @@
                         "I would recommend Rise Aerial to anyone. There's a good sense of community here. 
                         Everyone in the class cheers everyone on and it's really fun"
                     </p>
-                    <video controls>
+                    <video controls
+  loading="lazy">
     <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445310/Pole_tbrg4d.mp4" type="video/mp4">
 </video>
                 </div>
@@ -840,7 +844,8 @@
                     <p>
                         "It was super good fun, I'd definitely come again."
                     </p>
-<video controls>
+<video controls
+  loading="lazy">
     <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445308/Aerial1_riyup1.mp4" type="video/mp4">
 </video>
                 </div>
@@ -849,7 +854,8 @@
                     <p>
                         "The thing I've gained the most from it is confidence!"
                     </p>
-                   <video controls>
+                   <video controls
+  loading="lazy">
     <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445857/Pole1_mska45.mp4" type="video/mp4">
 </video>
                 </div>
