Update video source URLs to use quality auto

--- a/index.html
+++ b/index.html
@@ -683,11 +683,15 @@
                 Rise Aerial Acrobatics is Belfast's premier destination for aerial arts training. Whether you're looking for 
                 something new to do in Belfast, want to build confidence through aerial disciplines, or are seeking a fun, supportive community, 
                 we provide expert instruction in pole dancing, aerial hoop, aerial silks, aerial straps, and acrobatics with more activities coming soon!
+             </p>
+          <p>
+              Drop ins start at £15 per class, subscriptions range from £60-£120 per month.
+          </p>
         </section>
 
 <video controls
   loading="lazy">
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1767104272/NewYearAll_gszoqa.mp4" type="video/mp4">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/q_auto/v1767104272/NewYearAll_gszoqa.mp4" type="video/mp4">
 </video>
 
         <!-- Disciplines Section -->
@@ -836,7 +840,7 @@
                     </p>
                     <video controls
   loading="lazy">
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445310/Pole_tbrg4d.mp4" type="video/mp4">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/q_auto/v1766445310/Pole_tbrg4d.mp4" type="video/mp4">
 </video>
                 </div>
                 
@@ -846,7 +850,7 @@
                     </p>
 <video controls
   loading="lazy">
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445308/Aerial1_riyup1.mp4" type="video/mp4">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/q_auto/v1766445308/Aerial1_riyup1.mp4" type="video/mp4">
 </video>
                 </div>
                 
@@ -856,7 +860,7 @@
                     </p>
                    <video controls
   loading="lazy">
-    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/v1766445857/Pole1_mska45.mp4" type="video/mp4">
+    <source src="https://res.cloudinary.com/dpqrk2j3a/video/upload/q_auto/v1766445857/Pole1_mska45.mp4" type="video/mp4">
 </video>
                 </div>
             </div>
