Update text for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         <section id="disciplines">
             <h2>Our Disciplines</h2>
             <p style="margin-bottom: 30px;">
-                At Rise Aerial Acrobatics, we provide specialized classes in many disciplines, from beginner to advanced. 
+                Rise Aerial Acrobatics is a specialist fitness studio providing classes in many disciplines, from beginner to advanced. 
                 Each class is tailored to help you build strength, flexibility, and confidence.
             </p>
             
@@ -774,7 +774,7 @@
         <section id="schedule">
             <h2>Class Schedule at Rise Aerial Belfast</h2>
             <p style="margin-bottom: 20px;">
-                Rise Aerial Acrobatics operates classes throughout the week in Belfast. Generally 5pm-9pm Monday-Thursday. Times and availability may vary—visit our Gymcatch booking page 
+                Rise Aerial Acrobatics operates classes throughout the week in Belfast. Generally 5pm-9pm Monday-Thursday. Times and availability may vary — visit our Gymcatch booking page 
                 for the most up-to-date schedule and to book your spot!
             </p>
             
@@ -985,7 +985,7 @@ Rise Aerial Acrobatics Belfast is for over 18s only.
                     <a href="https://www.instagram.com/rise_aerial_belfast/" target="_blank" rel="noopener noreferrer">Instagram</a> • 
                     <a href="https://www.tiktok.com/@rise_aerial_belfa" target="_blank" rel="noopener noreferrer">TikTok</a></p>
                 <p style="margin-top: 15px;">
-                    Located in Belfast, Ravenhill Road, Rise Aerial is easily accessible and provides a welcoming 
+                    Located in Belfast, Ravenhill Road, Rise Aerial Acronatics is a specialist gym providing a welcoming 
                     space for aerial enthusiasts of all levels. Our studio is equipped with professional-grade equipment and 
                     qualified instructors.
                 </p>
