Add Yoga and Pilates sections to index.html

--- a/index.html
+++ b/index.html
@@ -751,13 +751,27 @@
                 
                 <div class="discipline-card">
                     <img src="https://res.cloudinary.com/dpqrk2j3a/image/upload/v1766443797/Flex-small_fipq1c.jpg" alt="Flex class">
-
                     <h3>🧘 Flexibility Training</h3>
                     <p>
                         Expect a mix of dynamic stretching, active drills, and relaxing deep holds to unlock your full range 
                         of motion and prevent injury. Ideal as a complement to other aerial disciplines.
                     </p>
                 </div>
+
+                <div class="discipline-card">
+                    <h3>Yoga</h3>
+                    <p>
+                        Launching February 2025!
+                    </p>
+                </div>
+
+                <div class="discipline-card">
+                    <h3>Pilates</h3>
+                    <p>
+                        Launching March 2025!
+                    </p>
+                </div>
+              
             </div>
         </section>
 
