--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   gtag('js', new Date());
 
   gtag('config', 'G-GJ335JEJNR');
+ 
 </script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17877915656">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17877915656');
+</script>
+  
     <!-- Meta Tags for SEO & AI Indexing -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
