Revise Yoga class description
Updated description for the Yoga class.

--- a/index.html
+++ b/index.html
@@ -774,7 +774,8 @@
                 <div class="discipline-card">
                     <h3>Yoga</h3>
                     <p>
-                        Launching February 2026!
+                        Start your week of right our monday morning yoga. With intention, movement, and breath in this gently energising early morning yoga class. 
+                      Designed to awaken the body and calm the mind, this session offers a balanced flow that builds strength, flexibility, and focus while easing you into the day ahead.
                     </p>
                 </div>
 
